--- a/index.html
+++ b/index.html
@@ -310,14 +310,14 @@ margin-top:250px;
 
 
 <div class="sweetdemon"><img src="sweetdemon.png" align="left" width="300px" height="300px" hspace=20>
-<h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">Sweet Demon</h2>
+<h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">&nbsp;&nbsp;&nbsp;Sweet Demon</h2>
 
-<p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>her first ever released single</p></p></div.sweetdemon>
+<p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>&nbsp;&nbsp;&nbsp;&nbsp;her first ever released single</p></p></div.sweetdemon>
 
 <div class="ghibli"><img src="ghibli.png" align="right" width="300px" height="300px" hspace=20>
-<span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">Sweet Demon</p>
+<span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">We Can't Be the Judged Ones,&nbsp;&nbsp;&nbsp;<br>If There's No One to Judge Us&nbsp;&nbsp;&nbsp;</p>
 
-<p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>her first ever released single</p></div.ghibli>
+<p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>will be released on 6/26&nbsp;&nbsp;&nbsp;&nbsp;</p></div.ghibli>
 
 
 
