--- a/girlinred.html
+++ b/girlinred.html
@@ -1,312 +1,60 @@
-<!doctype html>
-<!-- 
-  
-  CREATIVE DIRECTION / DESIGN BY RYDER RIPPS, OKFOCUS LLC.
-
--->
-<html class="no-js" lang="">
-
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>GRIMES – MISS ANTHROPOCENE</title>
-    <meta name="description" content="Miss Anthropocene, the latest album from GRIMES.">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, viewport-fit=cover">
-    <meta name="title" content="GRIMES – MISS ANTHROPOCENE">
-    <link rel="canonical" href="https://www.grimesmusic.com/">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:description" content="Watch Violence">
-    <meta name="twitter:title" content="GRIMES – MISS ANTHROPOCENE">
-    <meta name="twitter:site" content="@Grimezsz">
-    <meta name="twitter:creator" content="@Grimezsz">
-    <meta property="fb:admins" content="843010087" />
-    <meta property="og:site_name" content="Grimes" />
-    <meta property="og:title" content="GRIMES – MISS ANTHROPOCENE" />
-    <meta property="og:description" content="GLOBAL WARMING IS GOOD" />
-    <meta property="og:type" content="band" />
-    <meta property="og:url" content="https://grimesmusic.com" />
-    <meta property="og:image" content="img/grimes-war-nymph-ryder-ripps-landscape.jpg" />
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Arapey:400,400i|Roboto:300,300i,400,400i,500,500i,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/violence.css">
-    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-    <link rel="manifest" href="manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Facebook Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
-document,'script','https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '589070181169027');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=589070181169027&ev=PageView&noscript=1"
-/></noscript>
-<!-- DO NOT MODIFY -->
-<!-- End Facebook Pixel Code -->
-<!-- Global site tag (gtag.js) - Google Ads: 1015948457 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-1015948457"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-  gtag('config', 'AW-1015948457');
-</script>
+.hero-image {
+  background-image: url("hintergrund1.png");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
 
-<!-- Event snippet for Grimes remarketing page -->
-<script>
-  gtag('event', 'conversion', {
-      'send_to': 'AW-1015948457/iByyCL_BxQIQqcm45AM',
-      'aw_remarketing_only': true
-  });
-</script>
-<!-- Twitter single-event website tag code -->
-<script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
-<script type="text/javascript">twttr.conversion.trackPid('o36xk', { tw_sale_amount: 0, tw_order_quantity: 0 });</script>
-<noscript>
-<img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=o36xk&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
-<img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=o36xk&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
-</noscript>
-<!-- End Twitter single-event website tag code -->
-</head>
-<style type="text/css">
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.hero-text button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: black;
+  background-color: #ddd;
+  text-align: center;
+  cursor: pointer;
+}
+
+.hero-text button:hover {
+  background-color: #555;
+  color: white;
+}
 </style>
-
+</head>
 <body>
-    <div class="top">
-        <div class="rapper">
-            <span>
-                <a href="#" class=""><img src="grimes-logo.png"></a>
-                <a href="#miss" class="">Miss Anthropocene</a>
-                <a href="#global" class="">GLOBAL WARMING IS GOOD</a>
-                <a href="#gods" class="">The New Gods</a>
-                <a href="#" class="grey">SHOP (soon)</a>
-            </span>
-        </div>
-    </div>
-    <div class="sec miss mid" id="miss">
-        <div class="rapper">
-            <div class="left">
-                <span>
-                    <div class="gallery">
-                        <div class="galim okzoom">
-                            <img src="img/GRIMES_MISS_ANTHROPOCENE_ALBUM_COVER.jpg">
-                        </div>
-                        <div class="galim">
-                            <img src="img/GRIMES_MA.jpg">
-                        </div>
-                        <div class="galim">
-                            <img src="img/grimes-globe-girl-black-bg.jpg">
-                        </div>
-                    </div>
-                </span>
-            </div>
-            <div class="right">
-                <span>
-                    <span>
-                        <b>mis·an·thrope</b><br>
-                        <i>/ˈmis(ə)nˌTHrōp,ˈmiz(ə)nˌTHrōp/</i>, <b>noun</b> :<br>
-                        a person who dislikes humankind and avoids human society.<br><br>
-                        <b>An·thro·po·cene</b> <br>
-                        <i>/ˈanTHrəpəˌsēn/ </i>, <b>noun</b> :<br>
-                        the current geological age, viewed as the period during which human activity has been the dominant influence on climate and the environment.<br>
-                        Miss Anthropocene : The Goddess of Climate Crisis<br>
-                        An album by Grimes.
-                        <br><br>
-                        <a href="https://grimes.ffm.to/missanthropocene" target="_blank" style="font-weight: bold;text-decoration: underline;">Available Everywhere,<br>Please Click/Tap Here.</a>
-                    </span>
-                </span>
-            </div>
-        </div>
-    </div>
-    <!-- NEW GODS -->
-    <div class="sec gods" id="gods">
-        <div class="rapper">
-            <div class="left">
-                <span>
-                    <ol>
-                        <h2>NEW GODS</h2>
-                        <li><a href="https://grimes.ffm.to/missanthropocene" class="" target="_blank">Goddess of Climate Crisis</a></li>
-                        <li><a href="https://www.rollingstone.com/music/music-news/grimes-delete-forever-lil-peep-951653/" class="" target="_blank">Demon of Addiction</a></li>
-                        <li><a href="https://www.instagram.com/warnymph/" class="" target="_blank">Goddess of ID & Social Media</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=gYG_4vJ4qNA" class="" target="_blank">Demon of A.I.</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=M9SGYBHY0qs" class="" target="_blank">Goddess of Gaming</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=Fq1fW-jIRms" class="" target="_blank">Demon of Political Apathy</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=mrZC1Jcv0dw" class="" target="_blank">Goddess of Simulation</a></li>
-                        <li><a href="https://grimes.ffm.to/_beforethefever" class="" target="_blank">Demon of Ego Death</a></li>
-                        <li><a href="https://4ad.ffm.to/idoru" class="" target="_blank">Goddess of Digital Lust</a></li>
-                        <li><a href="https://genius.com/Grimes-and-pan-darkseid-lyrics" class="" target="_blank">Demon of Sexual Assault</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=iH0kfH04U68" class="" target="_blank">Goddess of Gender Roles</a></li>
-                    </ol>
-                </span>
-            </div>
-            <div class="right">
-                <span>
-                    <div class="gallery">
-                        <div class="galim okzoom">
-                            <img src="img/grimes-war-nymph-ryder-ripps.jpg">
-                        </div>
-                        <!--<div class="galim">
-                            <img src="img/grimes-war-nymph.jpg">
-                        </div>-->
-                    </div>
-                </span>
-            </div>
-        </div>
-    </div>
 
-    <!-- GLOBAL WARMING -->
-    <div class="sec global" id="global">
-        <div class="rapper">
-            <div class="left">
-                <span>
-                    <div class="gallery">
-                        <div class="galim okzoom">
-                            <img src="img/grimes-global-warming-is-good-2.jpg">
-                        </div>
-                        <div class="galim">
-                            <img src="img/grimes-global-warming-is-good.jpg">
-                        </div>
-                    </div>
-                </span>
-            </div>
-            <div class="right">
-                <!-- ADD FLICKITY HERE WHERE U HOVER OVER DIF THINGS ON THE LEFT AND IT CHANGES THE IMAGE -->
-                <span>
-                    <div>
-                        <h2>GLOBAL WARMING IS GOOD</h2>
-                        <p>I, </p>
-                        <p>Poet of destruction,<br>
-                        hereby declare that Global Warming is good. </p>
-                        <p>_<br>
-                        So, you humans have carved your existence into the earth, <br>
-                        lest you be forgotten. <br>
-                        Why lament?</p>
-                        <p>_<br>
-                        Be who you are, embrace your demise,<br>
-                        For you are the architect of it. </p>
-                        <p>_<br>
-                        How smart you are, to eradicate a species as resilient as your own.<br> 
-                        Why deny your power? </p>
-                        <p>_<br>
-                        It’s the greatest show in the universe.<br>
-                        Celebrate with me, the most momentous of deaths.</p>
-                        <p>_<br>
-                        Now is the time to burn twice as bright and half as long<br>
-                        <p>_<br>
-                        Sincerely,<br>
-                        Miss Anthropocene</p>
-                    </div>
-                </span>
-            </div>
-        </div>
-    </div>
-    <!-- SHOP
-    <div class="sec">
-        <div class="rapper">
-            
-            <div class="right">
-                <span>
-                    <div class="gallery">
-                        <div class="galim">
-                          <a href="#">
-                            <img src="img/grimes-war-nymph-ryder-ripps.jpg">
-                          </a>
-                        </div>
-                        <div class="galim">
-                          <a href="#">
-                            <img src="img/grimes-war-nymph.jpg">
-                          </a>
-                        </div>
-                    </div>
-                </span>
-            </div>
-        </div>
-    </div> -->
-    <div class="footer">
-        <div class="rapper"sty;le="display:flex;flex-wrap: wrap;">
-            <a href="https://www.instagram.com/grimes/"><img src="img/ig.svg"></a>
-            <a href="https://twitter.com/Grimezsz"><img src="img/tw.svg"></a>
-            <a href="#" class="meme"><img src="img/media-empire-logo.svg"></a>
-            <a href="http://store.grimes.com" class="grey"><img src="img/cart.svg"></a>
-            <a href="https://4ad.com/releases/907"><img src="img/4ad.svg"></a>
-        </div>
-    </div>
-    <br>
-    <div style="width:100%;padding:40px 0; text-align:center;display:inline-block;font-weight:bold"><a href="terms.html">TERMS OF SERVICE</a></div>
-    <div class="modals">
-        <span class="close">X</span>
-        <div class="memodal">
-            <div>
-                <span>
-                    <img src="img/media-empire-logo.svg">
-                    <br>
-                    <hr>
-                    <br>
-                    The heavenly realm has become a corporation called “Media Empire” where all of the Goddesses are employed. MEDIA-EMPIRE is the corporation that runs the simulation we are currently living in. “Simulation theory” dictates that we are a program on someone’s computer. FYI, it’s MEDIA-EMPIRE’s computer.
-                </span>
-            </div>
-        </div>
-    </div>
+<div class="hero-image">
+  <div class="hero-text">
+    <h1 style="font-size:50px">I am John Doe</h1>
+    <p>And I'm a Photographer</p>
+    <button>Hire me</button>
+  </div>
+</div>
+
+<p>Page Content..</p>
+
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
-<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-<script src="okzoom.min.js"></script>
-<script type="text/javascript">
-$(function() {
-    $('.okzoom img').okzoom({
-        width: 200,
-        height: 200
-    });
-});
-
-
-$('.gallery').flickity({
-    // options
-    cellAlign: 'left',
-    lazyLoad: true,
-    autoPlay: false,
-    wrapAround: true,
-    arrowShape: {
-        x0: 10,
-        x1: 40,
-        y1: 20,
-        x2: 40,
-        y2: 10,
-        x3: 25
-    },
-    contain: true
-});
-
-
-$(".meme").click(function() {
-    $("body").addClass('meopen');
-    return false;
-});
-
-$(".close").click(function() {
-    $("body").removeClass();
-    return false;
-});
-</script>
-
 </html>
