--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body, html {
 .hero-text {
   text-align: center;
   position: absolute;
-  top: 80%;
+  top: 85%;
   left: 0%;
   right: 0%;
 }
@@ -76,7 +76,7 @@ a.five:hover {
 
 .centered {
   position: absolute;
-  top: 12%;
+  top: 10%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -295,7 +295,7 @@ margin-top:250px;
   
 </div>
 
-<div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">|<br>|<br>|<br>|<br>- - new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26 - -<br> 
+<div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">|<br>|<br>|<br>|<br>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26<br> 
 --><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
