--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ margin-top:250px;
 <p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>her first ever released single</p></p></div.sweetdemon>
 
 <div class="ghibli"><img src="ghibli.png" align="right" width="300px" height="300px" hspace=20>
-<span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right"><br><br><br>We Can't Be the Judged Ones,<br>If There's No One to Judge Us</p>
+<span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right"><p></p>We Can't Be the Judged Ones,<br>If There's No One to Judge Us</p>
 
 <p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>will be released on 6/26</p></div.ghibli>
 
