--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ font-weight: lighter;
 }
 /* mouse over link */
 a.four:hover {
-  color: #778dff;
+  color: #ccc0ff;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 14px;
@@ -51,7 +51,7 @@ font-weight: lighter;
 }
 /* mouse over link */
 a.one:hover {
-  color: #778dff;
+  color: #ccc0ff;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 16px;
@@ -67,7 +67,7 @@ font-weight: lighter;
 }
 /* mouse over link */
 a.five:hover {
-  color: #778dff;
+  color: #ccc0ff;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 12px;
@@ -219,7 +219,7 @@ font-weight: lighter;
 
 /* mouse over link */
 a.two:hover {
-  color: #778dff;
+  color: #ccc0ff;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 12px;
