--- a/experimentieren.html
+++ b/experimentieren.html
@@ -1,20 +1,89 @@
 <!DOCTYPE html>
+<html>
 <head>
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/mstile-144x144.png">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-/* Container holding the image and the text */
-.hintergrund {
-  position: relative;
-  text-align: center;
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Top right text */
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("hintergrund1.png");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 85%;
+  left: 0%;
+  right: 0%;
+}
+
+a.four {
+color:#00FF00;
+text-decoration:none;
+font-family: 'Courier New',Arial;
+font-size: 14px;
+font-weight: lighter;
+}
+/* mouse over link */
+a.four:hover {
+  color: #ccc0ff;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 14px;
+  font-weight: lighter;
+}
+
+a.one {
+color:#00FF00;
+text-decoration:none;
+font-family: 'Courier New',Arial;
+font-size: 16px;
+font-weight: lighter;
+}
+/* mouse over link */
+a.one:hover {
+  color: #ccc0ff;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 16px;
+  font-weight: lighter;
+}
+
+a.five {
+color:#00FF00;
+text-decoration:none;
+font-family: 'Courier New',Arial;
+font-size: 12px;
+font-weight: lighter;
+}
+/* mouse over link */
+a.five:hover {
+  color: #ccc0ff;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+}
+
+.centered {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .top-right {
   position: absolute;
-  top: 1%;
+  top: 6%;
   right: 1.25%;
   }
   
@@ -132,13 +201,6 @@ z-index:1
   }  
   
 
-/* Bottom right text */
-.bottom-right {
-  position: absolute;
-  bottom: 1%;
-  right: 1.25%;
-}
-
 div.absolute {
   position: absolute;
   bottom: 17px;
@@ -147,112 +209,65 @@ div.absolute {
   text-align: right;
 }
 
-a.two {
+  a.two {
 color:#00FF00;
 text-decoration:none;
 font-family: 'Courier New',Arial;
-font-size: 14px;
+font-size: 12px;
 font-weight: lighter;
 }
 
 /* mouse over link */
 a.two:hover {
-  color: #778dff;
+  color: #ccc0ff;
   text-decoration:none;
   font-family: 'Courier New',Arial;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: lighter;
 }
 
-
-/* Centered text */
-.centered {
-  position: absolute;
-  top: 14.25%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.centered2 {
-  position: absolute;
-  top: 78%;
-  left: 0%;
-  right: 0%;
-text-align: center;
-}
-
-a.one {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 16px;
-font-weight: lighter;
-}
-/* mouse over link */
-a.one:hover {
-  color: #778dff;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 16px;
-  font-weight: lighter;
-}
-
-
-.centered3 {
-  position: absolute;
-  top: 79%;
-    left: 0%;
-  right: 0%;
-text-align: center;
-}
-
-a.four {
-color:#778dff;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 13px;
-font-weight: lighter;
-}
-/* mouse over link */
-a.four:hover {
-  color: #00FF00;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 13px;
-  font-weight: lighter;
-}
 
 .about {
 position: relative;
   right: 0px;
-  top: 60px;
+  top: 300px;
 }
 
-div.lyrics {
-width:      100%;
-  height:     100%; 
-  z-index:    -1;
-  top:        0; 
-  left:       0; 
-  position:   fixed; 
-  pointer-events: none;
+
+ .sweetdemon {
+position: relative;
+  left: 0px;
+  top: 280px;
 }
+
+ .ghibli {
+position: relative;
+ left: 0px;
+  top: 280px;
+}
+
+.contact {
+position: relative;
+  right: 0px;
+  top: 730px;
+}
+
+.centered3 {
+margin-top:110px;
+}
+
+div.music {
+margin-top:250px;
+}
+
 
 </style>
 </head>
-<html>
 <body>
 
+<div class="hero-image">
 
-
-
-
-<div class="hintergrund">
-<img class="profilbild" src="hintergrund1.png" width="100%" height="100%">
-
- 
- 
-  <div class="top-right"><a class="three" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"><img class="youtube" src="youtube.png" width="30" height="30"></a>
+ <div class="top-right"><a class="three" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"><img class="youtube" src="youtube.png" width="30" height="30"></a>
 <a class="three" href="https://soundcloud.com/amygdala_amara"target="_blank"><img class="soundcloud" src="soundcloud.png"  width="30" height="30"></a>
 <a class="three" href="https://www.instagram.com/amygdala_amara/"target="_blank"><img class="instagram" src="instagram.png" width="30" height="30"></a>
 <a class="three" href="https://www.facebook.com/amygdalaamaramusic/"target="_blank"><img class="facebook" src="facebook.png" width="30" height="30"></a>
@@ -266,101 +281,56 @@ width:      100%;
 <a class="three" href="https://twitter.com/amygdalaamara"target="_blank"><img class="twitter2" src="twitter2.png"  width="30" height="30"></a>
 <a class="three" href="https://www.twitch.tv/amygdala_amara"target="_blank"><img class="twitch2" src="twitch2.png"  width="30" height="30"></a></div>
 
-
-  <div class="bottom-right"><div class="absolute"><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">requests:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a></div></div>
-  
-  <div class="centered"><h2 style="visibility:hidden"></h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
+<div class="centered"><h2 style="visibility:hidden"></h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
 </div>
 
+  <div class="hero-text">
   <div class="centered2"><center><a class="one" href="https://ffm.to/amygdala_amara"target="_blank"> _NEW SONG </a> 
 <a class="one" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank"> spotify:12px </a>
 <a class="one" href="https://music.apple.com/de/artist/amygdala-amara/1513588735"> apple music;} </a>
 <a class="one" href="https://www.amazon.de/Sweet-Demon-amygdala_amara/dp/B08951QFCW/ref=sr_1_1?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=amygdala_amara&qid=1591103093&sr=8-1"target="_blank"> /amazon music/ </a>
 <a class="one" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">'youtube music'</a>
-</center></div>
+</center></div></div>
 
-
-  <div class="centered3"><center><h2><span style="font-size:13px"><span style="color:#778dff"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26 <br> 
---><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- </h2></center></div>
+  
 </div>
 
-<div class="about"><img src="lila.png" align="right" width="289px" height="355px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">about amygdala_amara</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">amygdala_amara is a musician from berlin, who started making<br>alternative pop music, because studying medicine left too much free<br>space in her time squedule. It's also rumored, that she doesn't have in<br>fact too much time, but too much struggle making music and not<br>failing the exams, but the music thing is much more fun.</p></p></div>
+<div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">|<br>|<br>|<br>|<br>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26<br> 
+--><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
 
-<div class= "lyrics"><marquee height="100%" direction="down"> <span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">
-<div style="text-indent:10px;">h1.verse1{</div>
-cut;<br>
-your throat by my tongue;<br>
-you got sober lungs;<br>
-and i make you feel;<br>
 
-<div style="text-indent:10px;">the highs and then the palest lows;</div>
-i lift you up; i punch you down;<br>
-baby;<br>
-}<br>
-<div style="text-indent:10px;">h1.bridge1{</div>
-tender boy, make me feel you leave;<br> 
-i cry two oceans, you traverse them for me;<br>
-and when you just swim fast enough;<br>
-my holy hand will rise;<br>
-}<br>
-<div style="text-indent:10px;">h1.chorus{</div>          
-when i take your mind;<br>
-and i make it mine;<br>
+<div class="about"><img src="lila.png" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right"><br>about amygdala_amara</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>amygdala_amara is a musician from berlin, <br>who started makingalternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.</p></p></div.about>
 
-<div style="text-indent:10px;">cause I heard what you said;</div>
-to the girl that you met;<br>
+<div class="music">
+<center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">*<br>*<br>*<br></center></p>
 
-<div style="text-indent:10px;">if you fight back, if you, you fight back;</div>
-boy boy;<br>
+<center><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">music</h2></center><center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">listen to her music on:<br><a class="five" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank">  {spotify}  </a><a class="five" href="https://music.apple.com/de/artist/amygdala-amara/1513588735">  {apple music}  </a><a class="five" href="https://www.amazon.de/Sweet-Demon-amygdala_amara/dp/B08951QFCW/ref=sr_1_1?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=amygdala_amara&qid=1591103093&sr=8-1"target="_blank">  {amazon music}  </a><a class="five" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">  {youtube music}  </a><br><br><br>*<br>*<br>*<br></p></center>
 
-<div style="text-indent:10px;">then I come around;</div> 
-at your mama’s house;<br>
-on your safest ground;<br>
+</div>
 
-<div style="text-indent:10px;">and I will defend;</div>
 
-<div style="text-indent:10px;">back up!;</div>
-} <br>
-<div style="text-indent:10px;">h1.verse2{</div>
-my hands;<br>
-to forget everything;<br>
-they just toughed heaven;<br> 
-and they toughed your skin;<br>
+<div class="sweetdemon"><img src="sweetdemon.png" align="left" width="300px" height="300px" hspace=20>
+<h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">Sweet Demon</h2>
 
-<div style="text-indent:10px;">deepthroat your feelings in a fight;</div>
-save ‘em in mind for better times;<br>
-i bought you flowers;<br>
+<p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>her first ever released single</p></p></div.sweetdemon>
 
-<div style="text-indent:10px;">what if we both just have like a chill night … together … watching them die?;</div>
-wouldn’t that be romantic?;<br>
-} <br>
-<div style="text-indent:10px;">h1.bridge2{</div>
-tender boy, make me feel you leave; <br>
-i burn the ground and you get burned by me;<br>
-and on a good day, if i feel like it;<br>
-my holy hand will rise;<br>
-} <br>
-<div style="text-indent:10px;">h1.chorus{</div>
-when i take your mind;<br> 
-and i make it mine;<br>
+<div class="ghibli"><img src="ghibli.png" align="right" width="300px" height="300px" hspace=20>
+<span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">We Can't Be the Judged Ones,<br>If There's No One to Judge Us</p>
 
-<div style="text-indent:10px;">cause I heard what you said;</div>
-to the girl that you met;<br> 
+<p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>will be released on 6/26</p></div.ghibli>
 
-<div style="text-indent:10px;">if you fight back, if you, you fight back;</div>
-boy boy;<br>
 
-<div style="text-indent:10px;">then I come around;</div> 
-at your mama’s house;<br>
-on your safest ground;<br>
 
-<div style="text-indent:10px;">and i will defend;</div>
+<div class="contact">
+<img src="coverblackgreen.jpg" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">contact&nbsp;&nbsp;&nbsp;</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>for any requests mail me:&nbsp;&nbsp;&nbsp;&nbsp;<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de&nbsp;&nbsp;&nbsp;&nbsp;</a><br>_ _ _ _ _ _ _&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;</p></p></div>
 
-<div style="text-indent:10px;">back up!;</div>
-}<br>
-</marquee></div>
+
+
+
+
+
 <body bgcolor="#000000">
 </body>
 </html>
