--- a/experimentieren.html
+++ b/experimentieren.html
@@ -295,13 +295,13 @@ margin-top:250px;
   
 </div>
 
-<div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">|<br>|<br>|<br>|<br>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26<br> 
+<div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">|<br>|<br>|<br>|<br>NEWS<br>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26<br> 
 --><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
 
 
-<div class="about"><img src="lila.png" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right"><br>about amygdala_amara</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>amygdala_amara is a musician from berlin, <br>who started makingalternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.</p></p></div.about>
+<div class="about"><img src="lila.png" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right"><br>.about amygdala_amara {</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>amygdala_amara is a musician from berlin, <br>who started makingalternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.</p><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">}</h2></div.about>
 
 <div class="music">
 <center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">*<br>*<br>*<br></center></p>
@@ -312,12 +312,12 @@ margin-top:250px;
 
 
 <div class="sweetdemon"><img src="sweetdemon.png" align="left" width="300px" height="300px" hspace=20>
-<h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">Sweet Demon</h2>
+<h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">// Sweet Demon //</h2>
 
 <p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>her first ever released single</p></p></div.sweetdemon>
 
 <div class="ghibli"><img src="ghibli.png" align="right" width="300px" height="300px" hspace=20>
-<span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">We Can't Be the Judged Ones,<br>If There's No One to Judge Us</p>
+<span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">// We Can't Be the Judged Ones,<br>If There's No One to Judge Us //</p>
 
 <p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>will be released on 6/26</p></div.ghibli>
 
