--- a/index.html
+++ b/index.html
@@ -260,6 +260,10 @@ div.music {
 margin-top:250px;
 }
 
+.thanksyou {
+margin-top:950px;
+}
+
 
 </style>
 </head>
@@ -323,11 +327,13 @@ margin-top:250px;
 
 
 
-<div class="contact">
-<img src="coverblackgreen.jpg" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">contact&nbsp;&nbsp;&nbsp;</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>for any requests mail me:&nbsp;&nbsp;&nbsp;&nbsp;<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de&nbsp;&nbsp;&nbsp;&nbsp;</a><br>_ _ _ _ _ _ _&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;</p></p></div>
+<center><div class="contact">
+<img src="coverblackgreen.jpg" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">contact&nbsp;&nbsp;&nbsp;</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>for any requests mail me:&nbsp;&nbsp;&nbsp;&nbsp;<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de&nbsp;&nbsp;&nbsp;&nbsp;</a><br>_ _ _ _ _ _ _&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;</p></p></div></center>
 
 
-
+<div class="thanksyou">
+<center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></center></p>
+<center><h2><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"> < thank you, for visiting me ><br><3<br><br></p></center>
 
 
 
