--- a/experimentieren.html
+++ b/experimentieren.html
@@ -290,11 +290,11 @@ margin-top:450px;
 --><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
-<div class="about"><img src="lila.png" width="290px" height="292px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">.about amygdala_amara {</span></p> 
+<div class="about"><img src="lila.png" width="290px" height="292px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><div class="abouttext"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">.about amygdala_amara {</span></p> 
 <p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>amygdala_amara is a musician from berlin, <br>who started making alternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.
 </span></p> 
 <p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">}</span></p> 
-</div>
+</div></div>
 
 
 
@@ -306,15 +306,15 @@ margin-top:450px;
 
 
 <div class="sweetdemon"><img src="sweetdemon.png" width="300px" height="300px" style="float: left; margin-right:30px; margin-bottom:30px;">
-<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">//Sweet Demon//</span><p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>my first single</span></p></div>
+<div class="sweetdemontext"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">//Sweet Demon//</span><p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>my first single</span></p></div></div>
 
 
-<div class="ghibli"><img src="ghibli.png" width="300px" height="300px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">//We Can't Be the Judged Ones,<br> If There's No One to Judge Us//</span></p> 
+<div class="ghibli"><img src="ghibli.png" width="300px" height="300px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><div class="ghiblitext"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">//We Can't Be the Judged Ones,<br> If There's No One to Judge Us//</span></p> 
 <p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>will be released on 6/26</span></p> 
-</div>
+</div></div>
 
 
-<div class="contact"><img src="coverblackgreen.jpg" width="290px" height="292px" style="float: left; margin-right:30px; margin-bottom:30px;">
+<div class="contact"><img src="coverblackgreen.jpg" width="290px" height="292px" style="float: left; margin-right:30px; margin-bottom:30px;"><div class="contacttext">
 <span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="contactlink">contact</a></span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
 _ _ _ _ _ _ _<br>
@@ -325,7 +325,7 @@ _ _ _ _ _ _ _<br>
 |<br>
 |<br>
 |<br>
-|<br></span></p></div>
+|<br></span></p></div></div>
 
 
 
