--- a/experimentieren.html
+++ b/experimentieren.html
@@ -235,7 +235,11 @@ margin-top:400px;
 }
 
 .contact {
-margin-top: 800px;
+margin-top: 550px;
+position: absolute;
+left: 30%;
+right: 30%;
+transform: translate (25%,25%);
 }
 
 .centered3 {
@@ -247,7 +251,7 @@ margin-top:250px;
 }
 
 .thanksyou {
-margin-top:450px;
+margin-top:1050px;
 }
 
 
