--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ font-weight: lighter;
 }
 /* mouse over link */
 a.one:hover {
-  color: #d8ffd8;
+  color: #8e9cff;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 16px;
