--- a/experimentieren.html
+++ b/experimentieren.html
@@ -10,7 +10,7 @@ body, html {
 }
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("hintergrund1.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("profil.jpg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -51,7 +51,7 @@ font-weight: lighter;
 }
 /* mouse over link */
 a.one:hover {
-  color: #d8ffd8;
+  color: #8e9cff;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 16px;
@@ -222,36 +222,43 @@ a.two:hover {
 
 
 .about {
-margin-top:300px;
+margin-top:19em;
 }
 
 
 .sweetdemon {
-margin-top:300px;
+margin-top:19em;
 }
 
 .ghibli {
-margin-top:400px;
+margin-top:25em;
+}
+
+.preangel {
+margin-top:30em;
+}
+
+.angel {
+   overflow: hidden;
+   padding: 0px;
+   width: 100%;
+   margin-top:0em;
 }
 
 .contact {
-margin-top: 550px;
-position: absolute;
-left: 30%;
-right: 30%;
-transform: translate (25%,25%);
+margin-top: 1em;
 }
 
 .centered3 {
-margin-top:110px;
+margin-top:8em;
 }
 
 div.music {
-margin-top:250px;
+margin-top:16em;
 }
 
 .thanksyou {
-margin-top:1050px;
+margin-top:10em;
 }
 
 
@@ -305,20 +312,24 @@ margin-top:1050px;
 <div class="music">
 <center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="musiclink">*</a><br>*<br>*<br></center></p>
 
-<center><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">music</h2></center><center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">listen to my music on:<br><a class="five" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank">  {spotify}  </a><a class="five" href="https://music.apple.com/de/artist/amygdala-amara/1513588735">  {apple music}  </a><a class="five" href="https://www.amazon.de/Sweet-Demon-amygdala_amara/dp/B08951QFCW/ref=sr_1_1?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=amygdala_amara&qid=1591103093&sr=8-1"target="_blank">  {amazon music}  </a><a class="five" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">  {youtube music}  </a><br><br><br>*<br>*<br>*<br></p></center>
+<center><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">music</h2></center><center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">listen to my music on:<br><a class="five" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank">  {spotify}  </a><a class="five" href="https://music.apple.com/de/artist/amygdala-amara/1513588735"target="_blank">  {apple music}  </a><a class="five" href="https://music.amazon.de/artists/B0894X7ZCR?ref=dm_sh_6b85-438d-dmcp-dbc2-df972&musicTerritory=DE&marketplaceId=A1PA6795UKMFR9"target="_blank">  {amazon music}  </a><a class="five" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">  {youtube music}  </a><br><br><br>*<br>*<br>*<br></p></center>
 </div>
 
 
 <div class="sweetdemon"><img src="sweetdemon.png" width="300px" height="300px" style="float: left; margin-right:30px; margin-bottom:30px;">
-<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">//Sweet Demon//</span><p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>my first single</span></p></div>
+<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">Sweet_Demon</span><p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>my first single</span></p></div>
 
 
-<div class="ghibli"><img src="ghibli.png" width="300px" height="300px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">//We Can't Be the Judged Ones,<br> If There's No One to Judge Us//</span></p> 
+<div class="ghibli"><img src="ghibli.png" width="300px" height="300px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</span></p> 
 <p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>will be released on 6/26</span></p> 
 </div>
 
-<div class="contact"><img src="coverblackgreen.jpg" width="290px" height="292px" style="float: left; margin-right:30px; margin-bottom:30px;">
-<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="contactlink">contact</a></span>
+<div class="preangel">
+<center><p class="preangel"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">|<br>_ | _<br>_ _ | _ _<br>_ | _<br>|<br>|<br>_ | _<br>_ _ | _ _<br>_ _ _ | _ _ _<br>_ _ | _ _<br>_ | _<br>|</p></center></div>
+
+<div class="angel"><a name="contactlink"><img src="angel.jpg" width="100%"></a></div>
+
+<center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
 _ _ _ _ _ _ _<br>
 |<br>
@@ -328,7 +339,7 @@ _ _ _ _ _ _ _<br>
 |<br>
 |<br>
 |<br>
-|<br></span></p></div>
+|<br></span></p></center>
 
 
 <div class="thanksyou">
