--- a/index.html
+++ b/index.html
@@ -234,12 +234,19 @@ margin-top:19em;
 margin-top:25em;
 }
 
+.preangel {
+margin-top:30em;
+}
+
+.angel {
+   overflow: hidden;
+   padding: 0px;
+   width: 100%;
+   margin-top:0em;
+}
+
 .contact {
-margin-top: 34em;
-position: absolute;
-left: 30%;
-right: 30%;
-transform: translate (25%,25%);
+margin-top: 1em;
 }
 
 .centered3 {
@@ -251,7 +258,7 @@ margin-top:16em;
 }
 
 .thanksyou {
-margin-top:70em;
+margin-top:10em;
 }
 
 
@@ -317,8 +324,12 @@ margin-top:70em;
 <p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>will be released on 6/26</span></p> 
 </div>
 
-<div class="contact"><img src="coverblackgreen.jpg" width="290px" height="292px" style="float: left; margin-right:30px; margin-bottom:30px;">
-<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="contactlink">contact</a></span>
+<div class="preangel">
+<center><p class="preangel"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">|<br>_ | _<br>_ _ | _ _<br>_ | _<br>|<br>|<br>_ | _<br>_ _ | _ _<br>_ _ _ | _ _ _<br>_ _ | _ _<br>_ | _<br>|</p></center></div>
+
+<div class="angel"><a name="contactlink"><img src="angel.jpg" width="100%"></a></div>
+
+<center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
 _ _ _ _ _ _ _<br>
 |<br>
@@ -328,7 +339,7 @@ _ _ _ _ _ _ _<br>
 |<br>
 |<br>
 |<br>
-|<br></span></p>
+|<br></span></p></center>
 
 
 <div class="thanksyou">
