--- a/index.html
+++ b/index.html
@@ -331,8 +331,11 @@ margin-top:10em;
 
 <center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
-_ _ _ _ _ _ _<br>
-|<br>
+_ _ _ _&nbsp;&nbsp;&nbsp;_ _ _ _<br>
+\/<br>
+_ | _<br>
+_ _ | _ _<br>
+_ | _<br>
 |<br>
 |<br>
 |<br>
