--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ a.four:hover {
   font-family: 'Courier New',Arial;
   font-size: 14px;
   font-weight: lighter;
+   text-shadow: 2px 2px 5px #ec2ec4;
 }
 
 a.one {
@@ -56,6 +57,7 @@ a.one:hover {
   font-family: 'Courier New',Arial;
   font-size: 16px;
   font-weight: lighter;
+   text-shadow: 2px 2px 5px red;
 }
 
 a.five {
@@ -72,6 +74,7 @@ a.five:hover {
   font-family: 'Courier New',Arial;
   font-size: 12px;
   font-weight: lighter;
+   text-shadow: 2px 2px 5px #ec2ec4;
 }
 
 .centered {
@@ -200,9 +203,6 @@ position: absolute;
 z-index:1
   }  
   
-
-
-
   a.two {
 color:#00FF00;
 text-decoration:none;
@@ -218,6 +218,7 @@ a.two:hover {
   font-family: 'Courier New',Arial;
   font-size: 12px;
   font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
 }
 
 
@@ -261,6 +262,15 @@ margin-top:16em;
 margin-top:10em;
 }
 
+.sweetdemon img{
+border: 0.01em solid #3e0bb4;
+box-shadow: 0em 0em 0.5em 0.001em #7b0f1d;
+}
+
+.ghibli img{
+border: 0.01em solid #00c5ab;
+box-shadow: 0em 0em 0.5em 0.001em #b71c1c;
+}b71c1c
 
 </style>
 </head>
