--- a/experimentieren.html
+++ b/experimentieren.html
@@ -40,6 +40,7 @@ a.four:hover {
   font-family: 'Courier New',Arial;
   font-size: 14px;
   font-weight: lighter;
+   text-shadow: 2px 2px 5px #ec2ec4;
 }
 
 a.one {
@@ -56,6 +57,7 @@ a.one:hover {
   font-family: 'Courier New',Arial;
   font-size: 16px;
   font-weight: lighter;
+   text-shadow: 2px 2px 5px red;
 }
 
 a.five {
@@ -72,6 +74,7 @@ a.five:hover {
   font-family: 'Courier New',Arial;
   font-size: 12px;
   font-weight: lighter;
+   text-shadow: 2px 2px 5px #ec2ec4;
 }
 
 .centered {
@@ -200,9 +203,6 @@ position: absolute;
 z-index:1
   }  
   
-
-
-
   a.two {
 color:#00FF00;
 text-decoration:none;
@@ -218,6 +218,7 @@ a.two:hover {
   font-family: 'Courier New',Arial;
   font-size: 12px;
   font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
 }
 
 
@@ -261,6 +262,15 @@ margin-top:16em;
 margin-top:10em;
 }
 
+.sweetdemon img{
+border: 0.01em solid #3e0bb4;
+box-shadow: 0em 0em 0.5em 0.001em #7b0f1d;
+}
+
+.ghibli img{
+border: 0.01em solid #00c5ab;
+box-shadow: 0em 0em 0.5em 0.001em #b71c1c;
+}b71c1c
 
 </style>
 </head>
@@ -287,21 +297,21 @@ margin-top:10em;
 
   <div class="hero-text">
   <div class="centered2"><center><a class="one" href="https://ffm.to/amygdala_amara"target="_blank">_NEW SONG&nbsp;&nbsp;</a> 
-<a class="one" href="#linknews">news:12px&nbsp;&nbsp;</a>
-<a class="one" href="#aboutamygdalaamara">about me;}&nbsp;&nbsp;</a>
-<a class="one" href="#musiclink">/music/&nbsp;&nbsp;</a>
-<a class="one" href="#contactlink">'contact'&nbsp;&nbsp;</a>
+<a class="one" href="#super_hot_news_like_BURNING">news:12px&nbsp;&nbsp;</a>
+<a class="one" href="#about_dat_gurl">about me;}&nbsp;&nbsp;</a>
+<a class="one" href="#sick_music">/music/&nbsp;&nbsp;</a>
+<a class="one" href="#no_dickpics_please_thanks">'contact'&nbsp;&nbsp;</a>
 <span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">shop (coming soon)
 </center></div></div>
 
   
 </div>
 
-<div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="linknews">|</a><br>|<br>|<br>|<br>NEWS<br>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26<br> 
+<div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="super_hot_news_like_BURNING">|</a><br>|<br>|<br>|<br>NEWS<br>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26<br> 
 --><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
-<div class="about"><img src="lila.png" width="290px" height="292px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">.about amygdala_amara {</span></p> 
+<div class="about"><img src="lila.png" width="290px" height="292px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="about_dat_gurl">.about amygdala_amara {</a></span></p> 
 <p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>amygdala_amara is a musician from berlin, <br>who started making alternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.
 </span></p> 
 <p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">}</span></p> 
@@ -310,29 +320,34 @@ margin-top:10em;
 
 
 <div class="music">
-<center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="musiclink">*</a><br>*<br>*<br></center></p>
+<center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="sick_music">*</a><br>*<br>*<br></center></p>
 
 <center><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">music</h2></center><center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">listen to my music on:<br><a class="five" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank">  {spotify}  </a><a class="five" href="https://music.apple.com/de/artist/amygdala-amara/1513588735"target="_blank">  {apple music}  </a><a class="five" href="https://music.amazon.de/artists/B0894X7ZCR?ref=dm_sh_6b85-438d-dmcp-dbc2-df972&musicTerritory=DE&marketplaceId=A1PA6795UKMFR9"target="_blank">  {amazon music}  </a><a class="five" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">  {youtube music}  </a><br><br><br>*<br>*<br>*<br></p></center>
 </div>
 
 
 <div class="sweetdemon"><img src="sweetdemon.png" width="300px" height="300px" style="float: left; margin-right:30px; margin-bottom:30px;">
-<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">Sweet_Demon</span><p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>my first single</span></p></div>
+<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">Sweet_Demon</span><p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>my first single<br>watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk"target="_blank">//music video//</a></span></p></div>
 
 
 <div class="ghibli"><img src="ghibli.png" width="300px" height="300px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</span></p> 
-<p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>will be released on 6/26</span></p> 
+<p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>will be released on 6/26<br>you can <a class="two" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"target="_blank">//pre-save//</a> it on spotify</span></p> 
 </div>
 
 <div class="preangel">
-<center><p class="preangel"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">|<br>_ | _<br>_ _ | _ _<br>_ | _<br>|<br>|<br>_ | _<br>_ _ | _ _<br>_ _ _ | _ _ _<br>_ _ | _ _<br>_ | _<br>|</p></center></div>
+<center><p class="preangel"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">|<br>|<br>|<br>_ | _<br>_ _ | _ _<br>_ | _<br>|<br>|<br>_ | _<br>_ _ | _ _<br>_ _ _ | _ _ _<br>_ _ | _ _<br>_ | _<br>|</p></center></div>
 
-<div class="angel"><a name="contactlink"><img src="angel.jpg" width="100%"></a></div>
+<div class="angel"><a name="no_dickpics_please_thanks"><img src="angel.jpg" width="100%"></a></div>
 
 <center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
-_ _ _ _ _ _ _<br>
+_ _ _ _ _ _ _ _ _ _<br>
+_ _ | _ _<br>
+_ | _<br>
 |<br>
+_ | _<br>
+_ _ | _ _<br>
+_ | _<br>
 |<br>
 |<br>
 |<br>
